# python-week-2022

./: .editorconfig  .gitignore  .gitpod.yml  Beerlog.ipynb  README.md  pyproject.toml
.github/workflows/: ci.yml
beerlog/: __init__.py  __main__.py  api.py  cli.py  config.py  core.py  database.py  models.py  serializers.py  settings.toml
beerlog/api/: __init__.py  __main__.py  utils.py
beerlog/api/routes/: __init__.py  beers.py
beerlog/cli/: __init__.py  __main__.py  utils.py
beerlog/cli/commands/: __init__.py  add.py  list_beers.py
docker/: Dockerfile  docker-compose.dev.yaml  docker-compose.prod.yaml
docs/: conf.py  index.rst
requirements/: dev.txt  prod.txt
scripts/: down.sh  env.sh  run.sh  start_poetry.sh  up.sh
tests/: __init__.py  conftest.py
tests/beerlog/: __init__.py  test_core.py  test_models.py  test_serializers.py
tests/functional/: __init__.py  test_api.py  test_cli.py
tests/unit/: __init__.py
tests/unit/beerlog/: test_config.py  test_core.py  test_models.py  test_serializers.py
tests/unit/beerlog/api/: test_main.py
