[tool.poetry]
name = "beerlog"
version = "0.1.0"
description = "Serviço para armazenar classificações de cervejas."
authors = ["Bruno Rocha <rochacbruno@gmail.com>"]
include = ["beerlog/settings.toml"]

[tool.poetry.dependencies]
python = "^3.8"
sqlmodel = "^0.0.6"
fastapi = "^0.75.2"
typer = "^0.4.1"
rich = "^12.2.0"
dynaconf = "^3.1.8"
uvicorn = "^0.18.2"
jupyter = "^1.0.0"
matplotlib = "^3.5.2"
lxml = "^4.9.1"
bs4 = "^0.0.1"
requests = "^2.28.1"
html5lib = "^1.1"
pandas = "^1.4.3"

[tool.poetry.dev-dependencies]
ipython = "^8.2.0"
bandit = "^1.7.4"
black = "^22.6.0"
editorconfig-checker = "^2.4.0"
isort = "^5.10.1"
safety = "^2.1.1"
mypy = "^0.971"
pre-commit = "^2.20.0"
prospector = "^1.7.7"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
Sphinx = "^5.0.2"
sphinx-rtd-theme = "^1.0.0"

[tool.poetry.scripts]
beerlog_cli = "beerlog.__main__:main"
beerlog_api = "beerlog.api:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
filterwarnings = "error"
addopts = [
    "-vv",
    "-s",
    "--cov-report=term-missing",
    "--cov-report=html:tests/coverage-results/htmlcov",
    "--cov=beerlog",
    # "--cov-fail-under=100",
]

[tool.mypy]
python_version = "3.8"
strict = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "dynaconf",
]
ignore_missing_imports = true

[tool.isort]
profile = "black"
line_length = 79
verbose = true
multi_line_output = 3
include_trailing_comma = true
skip_gitignore = true

[tool.black]
line-length = 79
verbose = true
